--- a/local/flowdiagram/templates/index.mustache
+++ b/local/flowdiagram/templates/index.mustache
@@ -1,5 +1,5 @@
 <div id="sample">
-  <button type="button" id="saveButton" name="button" >save</button>
+  <!--<button type="button" id="saveButton" name="button" >save</button>-->
   <div style="width:100%; white-space:nowrap;">
     <span style="display: inline-block; vertical-align: top; width:125px">
       <div class="palette-title">
@@ -24,7 +24,7 @@
           </div>
           <div class="">
             <label class="label-input" for="">Tipo</label>
-            <select id="select-tipoActividad" class="input-inspector" style="height:23px;padding:0;">
+            <select id="select-tipoActividad" class="select-inspector" style="height:23px;padding:0;">
               <option value="0">Seleccione una opcion</option>
               <option value="asimilativas">Asimilativas</option>
               <option value="gestion_informacion">Gestion de Informacion</option>
@@ -37,13 +37,13 @@
           </div>
           <div class="">
             <label class="label-input" for="">Subtipo</label>
-            <select id="select-subtipoActividad" class="input-inspector" style="height:23px;padding:0;">
+            <select id="select-subtipoActividad" class="select-inspector" style="height:23px;padding:0;">
               <option value="">Seleccione una opcion</option>
             </select>
           </div>
           <div class="">
             <label class="label-input" for="">Actor</label>
-            <select id="select-actor" class="input-inspector" style="height:23px;padding:0;">
+            <select id="select-actor" class="select-inspector" style="height:23px;padding:0;">
               <option value="0">Seleccione una opcion</option>
               <option value="Student">Student</option>
               <option value="Groups">Groups</option>
@@ -53,7 +53,7 @@
           </div>
           <div class="">
             <label class="label-input" for="">Interaccion</label>
-            <select id="select-tipointeraccion" class="input-inspector" style="height:23px;padding:0;">
+            <select id="select-tipointeraccion" class="select-inspector" style="height:23px;padding:0;">
               <option value="0">Seleccione una opcion</option>
               <option value="FTF">Face To Face</option>
               <option value="Blended">Blended</option>
